<resources>
    <string name="app_name">canary</string>
    <string name="email">E-mail</string>
    <string name="username">Username</string>
    <string name="email_or_username">E-mail or Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="create_an_account">Create an account</string>
</resources>